<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.vettrack.presentation.authentication.signup.SignUpViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/layoutCredentials"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        tools:background="@color/md_theme_primaryContainer">

        <TextView
            style="@style/TextAppearance.Material3.HeadlineMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/txt_create_user"
            android:textAlignment="center" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tfEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:minHeight="48dp"
                android:text="@={viewModel.email}"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tfPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/txt_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:minHeight="48dp"
                android:text="@={viewModel.password}"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:src="@{viewModel.iconResource}"
                android:visibility="@{viewModel.iconVisible}"
                tools:ignore="ContentDescription"
                tools:src="@drawable/ic_success" />

            <TextView
                style="@style/TextAppearance.Material3.LabelLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_error"
                android:textAlignment="center"
                android:visibility="@{viewModel.errorRegister}" />

            <TextView
                style="@style/TextAppearance.Material3.LabelLarge"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_success_signup"
                android:textAlignment="center"
                android:visibility="@{viewModel.successRegister}" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_background"
            android:elevation="12dp"
            android:enabled="@{viewModel.buttonEnabled}"
            android:minHeight="48dp"
            android:onClick="@{()->viewModel.createUser()}"
            android:text="@string/txt_register"
            app:cornerRadius="100dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancel"
            android:enabled="@{viewModel.cancelEnabled}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button_background"
            android:elevation="12dp"
            android:minHeight="48dp"
            android:text="@string/txt_cancel"
            app:cornerRadius="100dp" />
    </LinearLayout>

</layout>