<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.vettrack.presentation.authentication.login.LoginViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/md_theme_background"
        tools:context=".presentation.authentication.login.LoginActivity">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1"
            app:tint="@color/md_theme_primary"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tvAppName"
            style="@style/TextAppearance.Material3.TitleLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/md_theme_primary"
            app:layout_constraintTop_toBottomOf="@id/ivLogo" />

        <LinearLayout
            android:id="@+id/layoutCredentials"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAppName"
            app:layout_constraintVertical_bias="0.1">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tfEmail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:minHeight="48dp"
                    android:text="@={viewModel.email}"
                    android:textColorHint="@android:color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tfPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:hint="@string/txt_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:minHeight="48dp"
                    android:text="@={viewModel.password}"
                    android:textColorHint="@android:color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/TextAppearance.Material3.LabelLarge"
                android:drawableTint="@color/md_theme_onPrimaryContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_error"
                android:text="@string/txt_error"
                android:textAlignment="center"
                android:visibility="@{viewModel.errorLogin}"
                tools:ignore="UseCompatTextViewDrawableXml" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/button_background"
                android:elevation="12dp"
                android:enabled="@{viewModel.buttonEnabled}"
                android:minHeight="48dp"
                android:onClick="@{()->viewModel.login()}"
                android:text="@string/txt_sign_in"
                app:cornerRadius="100dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvSignUp"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/txt_sign_up"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutCredentials"
            app:layout_constraintVertical_bias="0.9"
            tools:layout_editor_absoluteX="0dp"
            tools:text="@string/txt_sign_up" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>