<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.vettrack.presentation.scheduleVisits.register.ScheduleVisitViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="8dp">

                <!--TITLE REGISTER-->
                <TextView
                    style="@style/TextAppearance.Material3.HeadlineSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_schedule_visit" />

                <!--DATE-->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilDate"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    app:startIconDrawable="@drawable/ic_calendar">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:focusable="true"
                        android:hint="@string/txt_date_mandatory"
                        android:text="@{viewModel.date}"
                        android:textColor="@android:color/black"
                        android:textColorHint="@android:color/black"
                        tools:paddingStart="45dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <!--CLINIC NAME-->
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    app:endIconMode="clear_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txt_clinic_name_mandatory"
                        android:inputType="text|textCapWords"
                        android:maxLines="1"
                        android:minHeight="48dp"
                        android:text="@={viewModel.clinicName}"
                        android:textColorHint="@android:color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <!--PET NAME-->
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    app:endIconMode="clear_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txt_pet_name_mandatory"
                        android:inputType="text|textCapSentences"
                        android:maxLines="1"
                        android:minHeight="48dp"
                        android:text="@={viewModel.petName}"
                        android:textColorHint="@android:color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <!--REGISTER BUTTON-->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="25dp"
                    android:background="@drawable/button_background"
                    android:elevation="12dp"
                    android:enabled="@{viewModel.buttonEnabled}"
                    android:minHeight="48dp"
                    android:onClick="@{()->viewModel.scheduleVisit()}"
                    android:text="@string/txt_register" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <include
            layout="@layout/loading_layout"
            app:loading="@{viewModel.loading}"
            tools:visibility="gone" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>